@@ -26,6 +26,7 @@ code cleanups
 API documentation:
 - add page containing a rough overview of general architecture
 - include protected (and maybe even private) members in API-documentation (this is not a library, after all)
+- RCommandStack
 
 (relatively) small stuff to do soon
 - Twintable/RKEditorDataFrame
@@ -69,3 +70,19 @@ stuff to do before the thing is usable
 
 stuff to do before a 1.0 release
 - handle graphics
+
+Notes for x11-window capturing:
+- Plan A:
+	- initialization function seems to be in_do_X11
+	- it might be possible to put a wrapper around this using R_setX11Routines
+	- this wrapper could watch the list of devices (curDevice, numDevices), see also addDevice to find out how the list is kept internally
+	- if a new device gets added grab its winId and capture (using QXEmbed?)!
+- Plan B:
+	- it looks like there's no way to get acces to R_setX11Routines or at least the needed struct R_X11Routines. (?)
+	- the level above that seems to be do_X11
+	- maybe we can modify the mapping from .Internal (X11) to do_X11 and insert wrapper from Plan A -> R_FunTab
+	- proceed like in Plan A
+	- less preferable as C-plugins might be able to call do_X11 directly (can they?)
+- Plan C:
+	- modify at R level (override x11 ())
+	- least preferable solution as we can not be sure we catch every use.
