@@ -1,7 +1,8 @@
+- improved handling of tcltk windows
 - new icon
 - decrease default debug level
 - don't crash when objects change their type from vector to list/data.frame, etc.
-- graph-creation no longer relies on (removable) R objects (can graph after load a workspace)
+- graph-creation no longer relies on (removable) R objects (can graph after loading a workspace)
 
 --- Version 0.3.2 - Apr-27-2005
 - overloaded require works properly with character.only=FALSE
